RESOLVED FIXED286242
Set up inline continuations correctly when not inserting a new child
https://bugs.webkit.org/show_bug.cgi?id=286242
Summary Set up inline continuations correctly when not inserting a new child
Attachments
[fast-cq]Patch (6.52 KB, patch)
2025-01-21 14:28 PST, alan
no flags
alan
Comment 1 2025-01-21 14:28:58 PST
Created attachment 473972 [details] [fast-cq]Patch
EWS
Comment 2 2025-01-22 05:09:35 PST
Committed 289234@main (9fca11bf1d0c): <https://commits.webkit.org/289234@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 473972 [details].
Radar WebKit Bug Importer
Comment 3 2025-01-22 05:10:14 PST
Note You need to log in before you can comment on or make changes to this bug.