Set up inline continuations correctly when not inserting a new child https://bugs.webkit.org/show_bug.cgi?id=286242

Reviewed by Antti Koivisto.

Inline boxes inside block containers with no in-flow content should still apply the content box offset (as opposed to positioning them at 0, 0).

* LayoutTests/imported/w3c/web-platform-tests/css/CSS2/positioning/toogle-abspos-on-relpos-inline-child-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/CSS2/positioning/toogle-abspos-on-relpos-inline-child.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/CSS2/reference/ref-filled-green-100px-square.xht: Added.
* Source/WebCore/rendering/RenderInline.cpp:
(WebCore::RenderInline::offsetForInFlowPositionedInline const):

Canonical link: https://commits.webkit.org/289234@main